[package]
name = "slay-the-spire-rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
clap = { version = "4.0.18", features = ["derive"] }
rand = "0.8.5"
serde_yaml = "0.9.14"
